--- a/404.html
+++ b/404.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Not found</title>
+    <script>
+        setTimeout(() => window.location = '/', 1000)
+    </script>
 </head>
 <body>
     404
